--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap");
 
+:root {
+  --orange: #ff6348;
+  --gray-1: #f1f2f6;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
@@ -8,10 +13,5 @@
 body {
   margin: 0;
   padding: 0;
-}
-
-.container-680 {
-  padding: 24px;
-  max-width: 680px;
-  width: 100%;
+  background-color: var(--gray-1);
 }
